...
                  child: Column(
                    mainAxisSize: MainAxisSize.min,
                    children: [
                      TextFormField(
                        controller: _titleController,
                        decoration: InputDecoration(
                          labelText: 'Title',
                          prefixIcon: const Icon(
                            Icons.title,
                            color: Color(0xFF1F3354),
                          ),
                          filled: true,
                          fillColor: Colors.grey[100],
...
                                    : null,
                      ),
                      const SizedBox(height: 12),
                      TextFormField(
                        controller: _descriptionController,
                        decoration: InputDecoration(
                          labelText: 'Description',
                          prefixIcon: const Icon(
                            Icons.description,
                            color: Color(0xFF1F3354),
                          ),
                          filled: true,
                          fillColor: Colors.grey[100],
...
                        maxLines: 2,
                      ),
                      const SizedBox(height: 12),
                      TextFormField(
                        controller: _locationController,
                        decoration: InputDecoration(
                          labelText: 'Location',
                          prefixIcon: const Icon(
                            Icons.location_on,
                            color: Color(0xFF1F3354),
                          ),
                          filled: true,
                          fillColor: Colors.grey[100],
...
                              ),
                              textStyle: const TextStyle(
                                fontSize: 16,
                                fontWeight: FontWeight.bold,
                              ),
                            ),
                            child: Text(widget.event == null ? 'Add' : 'Save'),
                          ),
                        ],
                      ),
                    ],
                  ),
                ),
...
