...
                              Navigator.pushNamed(context, '/task home');
                            },
                            text: "View Tasks",
                            image: "assets/images/tasks.gif",
                          ),
                          Menuitem(
                            key: const Key('recipe_menuitem'),
                            onPressed: () {
                              Navigator.pushNamed(context, '/Recipe');
                            },
                            text: "Suggests Recipe",
                            image: "assets/images/food.gif",
                          ),
                          Menuitem(
                            key: const Key('inventory_menuitem'),
                            onPressed: () {
                              Navigator.pushNamed(context, '/inventory');
                            },
                            text: "Show Inventory",
                            image: "assets/images/inventory.gif",
                          ),
...
                          //     Navigator.pushNamed(context, '/workout_planner');
                          //   },
                          //   text: "Workout Planner",
                          //   image: "assets/images/food.gif",
                          // ),
                          Menuitem(
                            key: const Key('family_calendar_menuitem'),
                            onPressed: () {
                              Navigator.pushNamed(context, '/family_calendar');
                            },
                            text: "Family Calendar",
                            image: "assets/images/calendar.gif",
                          ),
...
