...
                        expiryDate: expiryDate.isEmpty ? null : expiryDate,
                        unit: _selectedUnit,
                        amount: double.tryParse(_amountController.text) ?? 1.0,
                      );
                      Navigator.of(context).pop(newItem);
                    },
                    child: Text("OK"),
                  ),
                ],
              ),
        );
      } else {
        throw Exception("Failed to save item");
...
    final txtColor = textColor ?? Colors.white;

    return SizedBox(
      width: fixedSize.width,
      height: fixedSize.height,
      child: ElevatedButton(
        key: const Key('add_inventory_item_button'),
        onPressed: onPressed,
        style: ElevatedButton.styleFrom(
          backgroundColor: bgColor,
          shape: RoundedRectangleBorder(
            borderRadius: BorderRadius.circular(16),
            side: BorderSide(color: Colors.white24),
...
  }

  // Function to show confirmation dialog for each item with category selection
  Future<Map<String, dynamic>?> _showItemConfirmationDialogWithCategory(
    OCRItem item,
  ) async {
    String selectedCategory = 'Food';
    return await showDialog<Map<String, dynamic>>(
      context: context,
      builder:
          (context) => AlertDialog(
            backgroundColor: Color(0xFF1F3354),
            title: Text('Add Item', style: TextStyle(color: Colors.white)),
...
              children: [
                Text(
                  'Name: ${item.name.isNotEmpty ? item.name : 'Unknown Item'}',
                  style: TextStyle(color: Colors.white70),
                ),
                Text(
                  'Quantity: ${item.quantity}',
                  style: TextStyle(color: Colors.white70),
                ),
                Text(
                  'Price: \$${item.amount.toStringAsFixed(2)}',
                  style: TextStyle(color: Colors.white70),
                ),
...
                          ],
                        ),
                      ),
                      SizedBox(height: 20),
                      _buildTextField(
                        _titleController,
                        'Item Name',
                        isNumber: false,
                      ),
                      SizedBox(height: 16),
                      _buildDropdown('Choose Category'),
                      SizedBox(height: 16),
                      _buildUnitDropdown(),
...
