...
                          padding: const EdgeInsets.symmetric(
                            vertical: 14,
                            horizontal: 24,
                          ),
                        ),
                        child: const Text(
                          'Logout',
                          style: TextStyle(color: Colors.white),
                        ),
                        onPressed: () async {
                          // Set isLoggedIn to false in the database
                          final userId = UserSession().getUserId();
                          if (userId != null && userId.isNotEmpty) {
...
