...
            key: const Key('home_button'),
          ),
          Icon(
            Icons.menu,
            size: 30,
            color: Color(0xFFF2F2F2),
            key: const Key('menu_button'),
          ),
          Icon(
            Icons.dashboard_outlined,
            size: 30,
            color: Color(0xFFF2F2F2),
            key: const Key('dashboard_button'),
...
